# e_object_recognizer

./: CMakeLists.txt  README.md  README.md~  package.xml
scripts/: capsLayer.py  capsNet.py  image_collector.py  object_recognizer.py
weights/: checkpoint  graph.pbtxt  model_epoch_0047_step_287.index
